--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: "3"
 services:
   postgres:
     image: "postgres:latest"
+    environment:
+      - POSTGRES_PASSWORD=mysecretpassword
   redis:
     image: "redis:latest"
   server:
@@ -19,3 +21,20 @@ services:
       - PGDATABASE=postgres
       - PGPASSWORD=mysecretpassword
       - PGPORT=5432
+  client:
+    build:
+      dockerfile: Dockerfile.dev
+      context: ./client
+    volumes:
+      - /app/node_modules
+      - ./client:/app
+  worker:
+    build:
+      dockerfile: Dockerfile.dev
+      context: ./worker
+    volumes:
+      - /app/node_modules
+      - ./worker:/app
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
