--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,7 +3,7 @@ upstream client {
 }
 
 upstream api {
-    server api:3000;
+    server api:5000;
 }
 
 server {
@@ -17,4 +17,12 @@ server {
         rewrite /api/(.*) /$1 break;
         proxy_pass http://api;
     }
+
+    location /ws {
+        proxy_pass http://client;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+    }
 }
+
