--- a/.travis.yml
+++ b/.travis.yml
@@ -4,18 +4,18 @@ services:
   - docker
 
 before_install:
-  - docker build -t docker-react -f ./client/Dockerfile.dev ./client
+  - docker build -t aryankush25/docker-react -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true docker-react npm run test
+  - docker run -e CI=true aryankush25/docker-react npm run test
 
 after_success:
-  - docker build -t multi-client ./client
-  - docker build -t multi-nginx ./nginx
-  - docker build -t multi-server ./server
-  - docker build -t multi-worker ./worker
+  - docker build -t aryankush25/multi-client ./client
+  - docker build -t aryankush25/multi-nginx ./nginx
+  - docker build -t aryankush25/multi-server ./server
+  - docker build -t aryankush25/multi-worker ./worker
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
-  - docker push multi-client
-  - docker push multi-nginx
-  - docker push multi-server
-  - docker push multi-worker
+  - docker push aryankush25/multi-client
+  - docker push aryankush25/multi-nginx
+  - docker push aryankush25/multi-server
+  - docker push aryankush25/multi-worker
