--- a/.travis.yml
+++ b/.travis.yml
@@ -27,5 +27,8 @@ deploy:
   env: "Complex-docker-env"
   bucket_name: "elasticbeanstalk-eu-north-1-404087717260"
   bucket_path: "docker-multi"
+  on:
+    branch: main
   access_key_id: $AWS_ACCESS_KEY
-  secret_access_key: $AWS_SECRET_KEY
+  secret_access_key:
+    secure: $AWS_SECRET_KEY
